<resources>
    <string name="app_name">Simple Backup Service Client</string>
    <string name="updateList">Update list</string>
    <string name="updatedText">List updated</string>
    <string name="textKeepPress">Keep pressed</string>
    <string name="textContextMenuHeader">Select an option</string>
    <string name="textDownload">Download</string>
    <string name="textRestore">Restore</string>
    <string name="textDelete">Delete</string>
    <string name="operationCanceled">Operation canceled</string>
    <string name="loginTitle">Login</string>
    <string name="loginSignIn">Sign in</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="loginError">Login error</string>
    <string name="deleteMessage">Are you sure ?</string>
    <string name="textYes">Yes</string>
    <string name="textNo">No</string>
    <string name="downloadMessage">Downloading the backup may cause an increase in the cost of your cell phone.</string>
    <string name="mainMessage">Backups</string>
    <string name="downloaded">downloaded</string>
    <string name="name">name</string>
    <string name="createNameValidate">enter a name</string>
    <string name="createNew">Create new Backup</string>
    <string name="created">Created</string>
    <string name="logoutError">Log out error</string>
    <string name="logout">Bye  :-)</string>
    <string name="saveCredentials">Save credentials</string>
    <string name="createNewBD">Create new BD.</string>
    <string name="restored">Restored.</string>
    <string name="restoredNew">New BD created.</string>
    <string name="alreadyExist">Already exist bd</string>
    <string name="noBD">No have bd.</string>
    <string name="logoutSession">Logout</string>
    <string name="retry">retry</string>
    <string name="Error_id">ID error</string>
    <string name="createBackup">Create backup</string>
</resources>