<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin">

    <TextView
        android:text = "@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textView"
        android:textSize = "32sp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop = "46dp"
        android:contentDescription="TODO" />

    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/usernameLoginText"
        android:hint = "@string/loginUsername"
        android:layout_marginTop = "46dp"
        android:layout_below = "@+id/imageView"
        android:layout_alignParentStart = "true"
        android:layout_alignParentEnd = "true"
        android:singleLine="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_below="@+id/usernameLoginText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/usernameLoginText"
        android:hint="@string/loginPassword" />

    <EditText
        android:id="@+id/serverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_alignEnd="@+id/usernameLoginText"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="server"
        android:inputType="text" />



    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_session_checkBox"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"

        android:layout_marginStart="17dp"

        android:layout_marginEnd="15dp"

        android:text="@string/loginSignIn" />

    <CheckBox
        android:id="@+id/save_session_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serverText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:checked="true"
        android:text="@string/saveCredentials"
        android:visibility="invisible"
        tools:visibility="invisible" />

</RelativeLayout>